<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:gravity="center_horizontal">

    <TextView android:text="@string/choose_menu" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/header_margin"
        android:paddingRight="@dimen/header_margin"
        android:paddingLeft="@dimen/header_margin"
        android:paddingBottom="@dimen/header_bottom_margin"
        android:textSize="@dimen/text_size"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:gravity="clip_horizontal" />
    <Button
        android:id="@+id/button_add_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_book"/>

    <Button
        android:id="@+id/button_edit_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_book"/>

    <Button
        android:id="@+id/button_delete_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_book"/>

    <Button
        android:id="@+id/button_view_books"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_all_books"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log out"
        android:id="@+id/Blogout"
        android:background="#ffffff"
        android:onClick="bLoginOut"
        android:nestedScrollingEnabled="false"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
