<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="30dp">
    <EditText
        android:id="@+id/edit_text_book_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_book_name"
        android:padding="@dimen/view_padding"
        android:textSize="@dimen/add_edit_textsize"/>
    <EditText
        android:id="@+id/edit_text_book_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_book_author"
        android:padding="@dimen/view_padding"
        android:textSize="@dimen/add_edit_textsize"/>
    <EditText
        android:id="@+id/edit_text_book_isbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_book_isbn"
        android:padding="@dimen/view_padding"
        android:textSize="@dimen/add_edit_textsize"/>


    <Button
        android:id="@+id/button_add_update_book"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/button_padding"
        android:text="@string/add_book"
        android:layout_gravity="center"/>

</LinearLayout>